--- a/wwwroot/Simulationfiles/newTest.html
+++ b/wwwroot/Simulationfiles/newTest.html
@@ -26,7 +26,7 @@
       ];
 
       function connectDevice() {
-        ws = new WebSocket(`ws://localhost:5010/ws/${deviceId}`);
+        ws = new WebSocket(`ws://170.9.35.49:5000/ws/${deviceId}`);
         ws.binaryType = "arraybuffer";
 
         ws.onopen = () => {
